--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,16 @@
 
     <string name="title_cars">Cars</string>
     <string name="title_favorites">Favorites</string>
-    <string name="title_settings">Settings</string>
+    <string name="title_items">Items</string>
     <string name="title_details">Car details</string>
+    <string name="title_manufacturers">Manufacturers</string>
+    <string name="title_engines">Engines</string>
+    <string name="title_fuels">Fuels</string>
+    <string name="title_transmissions">Transmissions</string>
+    <string name="title_dialog">Choose option</string>
 
-    <string name="msg_no_cars">Sorry, no car to display</string>
-    <string name="action_settings">Settings</string>
+    <string name="msg_no_item">Sorry, no elements to display</string>
+    <string name="action_items">Items</string>
     <string name="activity_title_home">Notes</string>
 
     <string name="lbl_new_car_title">New Car</string>
@@ -24,5 +29,6 @@
     <string name="hint_enter_imgurl">Image url</string>
     <string name="hint_enter_favorite">Favorite</string>
 
-    <string name="empty_string"></string>
+    <string name="toast_fill_every_fields">Please fill up every field</string>
+
 </resources>
