New items to create cars, with dropdown list populated from database, and navigation improvments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="hint_enter_year">Year</string>
     <string name="hint_enter_price">Price</string>
     <string name="hint_enter_engine">Engine</string>
+    <string name="hint_enter_fuel">Fuel</string>
     <string name="hint_enter_transmission">Transmission</string>
     <string name="hint_enter_description">Description</string>
     <string name="hint_enter_imgurl">Image url</string>
