--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_cars">Cars</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_items">Items</string>
+    <string name="title_settings">Settings</string>
     <string name="title_details">Car details</string>
     <string name="title_manufacturers">Manufacturers</string>
     <string name="title_engines">Engines</string>
@@ -14,6 +15,13 @@
     <string name="msg_no_item">Sorry, no elements to display</string>
     <string name="action_items">Items</string>
     <string name="activity_title_home">Notes</string>
+
+    <string name="settings_views">Views</string>
+    <string name="settings_languages">Languages</string>
+    <string name="settings_opt_list">List</string>
+    <string name="settings_opt_grid">Grid</string>
+    <string name="settings_opt_eng">English</string>
+    <string name="settings_opt_fre">French</string>
 
     <string name="lbl_new_car_title">New Car</string>
     <string name="lbl_edit_car_title">Edit Car</string>
