--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_items">Items</string>
     <string name="title_settings">Settings</string>
-    <string name="title_details">Car details</string>
+    <string name="title_car_details">Car details</string>
+    <string name="title_item_details">Item details</string>
     <string name="title_manufacturers">Manufacturers</string>
     <string name="title_engines">Engines</string>
     <string name="title_fuels">Fuels</string>
