Removing Context variable to avoid memory leak, improve UI with more pictures displaying, add cars.csv for faster usage after install, removed all warnings (one lefts...)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="lbl_edit_transmission_title">Edit Transmission</string>
     <string name="lbl_favorite">Favorite</string>
 
+    <string name="description_element_img">Car picture</string>
+
     <string name="hint_enter_manuf">Manufacturer</string>
     <string name="hint_enter_model">Model</string>
     <string name="hint_enter_label">Label</string>
