--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CarsApp</string>
+    <string name="app_name">TestApp</string>
 
     <string name="preferences_file_key" translatable="false">com.musala.groche.carsapp.user_prefs</string>
 
